--- a/src/Styles/Home.scss
+++ b/src/Styles/Home.scss
@@ -2,7 +2,7 @@
   width: 100%;
   align-items: center;
   font-family: "Arial", sans-serif;
-  color: #3e497a;
+  color: #010101;
 }
 
 .about {
@@ -13,7 +13,7 @@
   justify-content: center;
   align-items: center;
   text-align: center;
-  background-color: #21325e;
+  background-color: #080808;
   color: #f0f0f0;
 }
 
@@ -44,7 +44,7 @@
 }
 
 .skills h1 {
-  color: #3e497a;
+  color: #242427;
 }
 
 .skills .list {
