changed design, added info, added category

--- a/src/Styles/Home.scss
+++ b/src/Styles/Home.scss
@@ -1,7 +1,7 @@
 .home {
   width: 100%;
   align-items: center;
-  font-family: "Arial", sans-serif;
+  font-family: "Georgia";
   color: #010101;
 }
 
@@ -13,14 +13,13 @@
   justify-content: center;
   align-items: center;
   text-align: center;
-  background-color: #080808;
   color: #f0f0f0;
 }
 
 .about h2 {
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-family: "Georgia", Tahoma, Geneva, Verdana, sans-serif;
   font-size: 80px;
-  color: #e9d35b;
+  color: #ffffff;
   height: 50px;
 }
 
