--- a/src/App.scss
+++ b/src/App.scss
@@ -3,7 +3,7 @@
   height: auto;
   display: flex;
   flex-direction: column;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Georgia;
   background-color: #f0f0f0;
 }
 
