--- a/src/Styles/Footer.scss
+++ b/src/Styles/Footer.scss
@@ -10,11 +10,17 @@
   margin-top: 200px;
 }
 
-.socialMedia svg {
+/*.socialMedia svg {
   color: white;
   margin: 20px;
   font-size: 70px;
   cursor: pointer;
+}
+*/
+
+.footer .contact {
+  font-size: 20px;
+  color: white;
 }
 
 .footer p {
